tests/NormalTests/paczka1/fuzzy1/38497443.err
Error in line 6: fMYshjvvt9T A980 84,8
Error in line 3: LIhn9JVCPJ4 A980 6,3
Error in line 15: fMYshjvvt9T S525 32,2
Error in line 18: LIhn9JVCPJ4 S525 94,3
Error in line 21: cg2RQnFXC S438 95,9
Error in line 30: 8HPLeD S525 54,3
Error in line 25: cg2RQnFXC A629 57,3
Error in line 38: cg2RQnFXC S525 86,0
